
2002-07-22 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* configure.in, configure.ac: renamed configure.in to configure.ac.

	* configure.ac, log4cpp.spec.in, doc/Doxyfile.in, doc/Makefile.am,
	m4/AC_CREATE_PREFIX_CONFIG_H.m4, m4/AC_CXX_HAVE_SSTREAM.m4, 
	m4/AC_CXX_NAMESPACES.m4, m4/BB_CHECK_OMNITHREADS.m4:
	updated AC macros and variables to autoconf 2.50. 

2002-07-11 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* src/PatternLayout.cpp: use std::string::size_type instead of int.
	* src/PropertyConfiguratorImpl.cpp: use map.lower_bound() to determine 
	begin and end for appender and category properties.
	
2002-07-10 David Resnick <dresnick@mobilespear.com>
	* src/PatternLayout.cpp, include/log4cpp/PatternLayout.hh, 
	tests/testPattern.cpp, msvc6/testPattern/testPattern.dsp: added support 
	for formatting date and testing that new support.
	
	* tests/testDLL.cpp, msvc6/testDLL/testDLL.dsp: added project that
	tests log4cpp DLL (on win32 platform), including export of container
	object.
	
	* msvc6/log4cpp/log4cpp.dsp, msvc6/log4cppDLL/log4cppDLL.dsp: fixed so
	that PropertyConfigurator and attendant files are compiled in MSVC6.

2002-07-09 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* src/StringUtil.hh, src/StringUtil.cpp: added a more generic split()
	method taking an output_iterator instead of a vector to store the 
	result.

	* src/PropertyConfiguratorImpl.hh, src/PropertyConfiguratorImpl.cpp:
	renamed addAppenders() to configureCategory(). 
	fixed configureCategory(): had a nested loop for priorities and 
	appenders.
	replaced find(property, '.') with StringUtil::split() in several
	places.

	* src/PropertyConfiguratorImpl.cpp: fixed configureCategory() fix.
	
2002-07-05 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* src/StringUtil.hh, src/StringUtil.cpp: added split() method.

	* src/PropertyConfiguratorImpl.hh, src/PropertyConfiguratorImpl.hh:
	changed the way configuration is done: first instantatiate all